fix(product-stage): adjusts shadow to not overlap each other

--- a/assets/scss/_user-variables.scss
+++ b/assets/scss/_user-variables.scss
@@ -28,6 +28,7 @@ $header-navbar-brand-width: 12.5rem;
 $header-nav-link-padding-x: 1rem;
 
 $box-shadow-sm: 0 12px 15px rgba($gray-600, 0.1);
+$box-shadow-lg: 0px 10px 10px 10px rgba(140, 152, 164, 0.18);
 $header-section-box-shadow: $box-shadow-sm;
 $header-nav-link-color: var(--color-black);
 
