--- a/assets/scss/components/_product-stage.scss
+++ b/assets/scss/components/_product-stage.scss
@@ -30,7 +30,11 @@
     z-index: 0;
     background: var(--color-white);
     border-radius: 0.3125rem; // front theme class: rounded
-    box-shadow: 0px 10px 40px 10px rgba(140, 152, 164, 0.18); // front theme class: shadow-lg
+    box-shadow: $box-shadow-lg;
+  }
+
+  .shadow-lg {
+    box-shadow: $box-shadow-lg !important;
   }
 
   &--alternative-border {
